--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
-    "angular": "~1.4.2"
+    "angular": "~1.4.2",
+    "masonry": "~3.3.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
@@ -32,6 +33,12 @@
         "dist/fonts/glyphicons-halflings-regular.woff",
         "dist/fonts/glyphicons-halflings-regular.woff2"
       ]
+    },
+    "masonry": {
+      "main": [
+        "./dist/masonry.pkgd.js"
+      ],
+      "dependencies": {}
     }
   },
   "resolutions": {
