--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
     "angular": "~1.4.2",
-    "masonry": "~3.3.2"
+    "masonry": "~3.3.2",
+    "gsap": "~1.18.2",
+    "font-awesome": "~4.5.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
@@ -39,6 +41,20 @@
         "./dist/masonry.pkgd.js"
       ],
       "dependencies": {}
+    },
+    "gsap": {
+      "main": [
+        "./src/minified/TweenMax.min.js"
+      ],
+      "dependencies": {}
+    },
+    "font-awesome": {
+      "main": [
+        "less/font-awesome.less",
+        "fonts/fontawesome-webfont.eot",
+        "fonts/fontawesome-webfont.woff",
+        "fonts/fontawesome-webfont.woff2"
+      ]
     }
   },
   "resolutions": {
