--- a/bower.json
+++ b/bower.json
@@ -18,10 +18,9 @@
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
     "angular": "~1.4.2",
-    "masonry": "~3.3.2",
     "gsap": "~1.18.2",
     "font-awesome": "~4.5.0",
-    "angular-masonry-directive": "*"
+    "angular-masonry": "~0.14.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
